--- a/assets/styles.css
+++ b/assets/styles.css
@@ -24,6 +24,7 @@ body {
 }
 
 nav  {
+    display: flex;
     float: right;
 }
 
@@ -60,6 +61,8 @@ li h2 {
     
 }
 
+
+
 .navcontainer {
     padding-top: 8px;
     width: 100%;
@@ -68,6 +71,9 @@ li h2 {
     background-color: var(--color-Blue)
     
 }
+
+
+
 
 .navcontainer::after {
  content: '';
@@ -83,7 +89,10 @@ li h2 {
     float: left;
     
 }
+.navcontainer ul li {
+        
 
+}
 .splash-container {
     text-transform: uppercase;
     background-color: var(--color-White);
@@ -91,7 +100,7 @@ li h2 {
     margin: 0px;
     height: 800px;
     display: flex;
-
+    
 }
 
 .profilePicMain {
@@ -100,56 +109,44 @@ li h2 {
     
 }
 
-.splash-container .float-left {
+.float-left {
     background-color: var(--color-White);
-    flex: 8;
+    flex: 1;
     display: flex;
-    justify-content: flex-start
+    text-align: center;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
-
-
-
+    
 }
 .splash-container .float-right {
-    background-color: var(--color-White);
+    background-color: rgb(255, 255, 255,0.2);
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 6;
+    flex: 1;
 }
 
-.webdevclass,.portfolioclass, .welcomeclass {
-    background-color:;
-    position: relative;
-    top: 200px;
-    right: -120px;
-    margin: 0px;
-    padding:0px;
+.profilePicMain {
+    max-width: 
 }
 
-#welcome{
-    position: relative;
-    top: 130px;
-    font-size: 52px;
-    font-weight: 400;
-    right: -4px;
-    margin: 0;
-}
-#webdev {
-    position: relative;
-    top: -160px;
-    font-size: 32px;
-    font-weight: 800;
-    right: -8px;
-    letter-spacing: 26px;
-
+#welcome,#portfolio,#webdev {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 70px;
+    flex: 0 1;  
+    font-weight: lighter;  
 }
 #portfolio {
-    color: var(--color-Blue);
-    font-size: 100px;
-    font-weight: 800;
+    font-size: 110px;
+    font-weight: bolder;
+
 }
+
+#wwebdev {
+    font-size: 50px;
+}
+
 
 
 
@@ -209,7 +206,7 @@ margin: 0px;
     padding: ;
     background-color: var(--color-White);
     display: flex;
-    justify-content: space-around
+    justify-content: space-around;
     flex: 1 0 50%;
     flex-wrap: wrap;
     }
@@ -227,7 +224,7 @@ margin: 0px;
 
 
 .image-one  {
-    padding: 0px;
+    
     border: 10px solid var(--color-Blue);
     align-self: base;
     border-radius: 0px;
@@ -290,6 +287,7 @@ margin: 0px;
 .article-about {
     text-align: center;
     background-color: var(--color-White);
+    flex: 0 1;
     
     
 }
@@ -388,6 +386,50 @@ section img:hover + .item-title {
 
 }
 
+@media screen and (max-width:1010px) {
+#welcome,#portfolio,#webdev {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    flex: 0 1;  
+    font-weight: lighter;  
+}
+#portfolio {
+    font-size: 40px;
+    font-weight: bolder;
+
+}
+
+#wwebdev {
+    font-size: 25px;
+}
+}
+
+@media screen and (max-width:660px) {
+    #welcome,#portfolio,#webdev {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        flex: 0 1;  
+        font-weight: lighter;  
+    }
+    #portfolio {
+        font-size: 30px;
+        font-weight: bolder;
+    
+    }
+    
+    #wwebdev {
+        font-size: 5px;
+    }
+    .float-left {
+    background-color: var(--color-White);
+    flex: 1;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    }
 
 /* media query kept at bottom due to css parsing order */
 /* mobile */
@@ -396,6 +438,15 @@ section img:hover + .item-title {
         min-width: 88%;
     }
 }
+
+@media screen and (max-width:1126px) {
+    .profilePicMain {
+        max-width: 333px ;
+       
+    }
+    
+}
+
 
 
 
@@ -412,7 +463,7 @@ section img:hover + .item-title {
         
     }
     .navcontainer  {
-        
+        flex-direction: column;
     }
     .navcontainer  {
         display: flex;
@@ -454,58 +505,29 @@ section img:hover + .item-title {
     }
 }
 
-@media screen and (max-width:1312px) {
-    
-    .webdevclass,.portfolioclass, .welcomeclass {
-        transform: translate(180px,20px);
-        transition: 1s ease-out;  
-    }
-    
-}
 
-@media screen and (max-width:1310px) {
+    
+
+
+
+
+    
+
+
+@media screen and (max-width: 600px) {
+    .splash-container{
+        flex-direction: column;
+        flex-orde;
+        
+    }
     .profilePicMain {
-         transform: scale(0.8);
-        transition: 1s;    
+        max-width: 333px ;
     }
-    .profilePicMain {
-        transform: translate(-330px, -110px);
-        transition: 1.5s;    
-   }
-    .webdevclass,.portfolioclass, .welcomeclass {
-        background-color:;
-        position: relative;
-        top: 450px;
-        right: -120px;
-        margin: 0px;
-        padding:0px;
-    }
-    
 }
-@media screen and (max-width: 1100px) {
-.float-left{ 
-    transform: scale(1);
-    transition: 1.5s;
-
-} 
-    
-.webdevclass,.portfolioclass, .welcomeclass{
-    transform: translate(0px);
-    transition: 1.5s; 
-}
-    
-}
-
-
 
 
 @media screen and (max-width: 908px) {
-    .float-left{ 
-        transform: scale(1);
-        transition: 1.5s;
-    
-    } 
-        
+   
     .flex-container {
         flex-direction: column;
     }
@@ -535,95 +557,14 @@ section img:hover + .item-title {
         max-width: 768px;
         align-self: center;
     }
-    .webdevclass,.portfolioclass, .welcomeclass {
-        transform: translate(-10px,20px);
-        transition: 1s ease-out;  
-        
-        }
-    .profilePicMain {
-        transform: translate(-460px,-80px);
-        transition: 1.5s; 
-    }
-       
-    .webdevclass {
-        margin-top: 0px;
-}
-
-}
-
-@media screen and (max-width: 800px) {
-   
-    .float-left{ 
-        transform: scale(0.8);
-        transition: 1.5s;
-    } 
-    .webdevclass,.portfolioclass, .welcomeclass{
-        transform: translate(-100px);
-        transition: 1.5s; 
-    }
-        
-    .profilePicMain {
-        transform: scale(0.4);
-        transform: translate(-520px,-130px);
-        transition: 1.5s; 
-    }
-       
-    .webdevclass {
-        margin-top: 0px;
-}
-
-}
-
-@media screen and (max-width: 620px) {
-   
- 
-    .profilePicMain {
-        max-width: 400px;
-        transform: scale(0.3);
-        transform: translate(-570px,-80px);
-        transition: 1.5s; 
-    }
-       
-    .webdevclass {
-        margin-top: 0px;
-}
-.float-left{ 
-    transform: scale(0.5.5);
-    transition: 1.5s;
-
-} 
     
-.webdevclass,.portfolioclass, .welcomeclass{
-    transform: translate(-130px,30px);
-    transition: 1.5s; 
-   
 
 }
-
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
 }
-@media screen and (max-width: 500px) {
-   
- 
-    .profilePicMain {
-        max-width: 300px;
-        border: 10px solid var(--color-Blue);
-        transform: translate(-560px,-140px);
-        transition: 1.5s; 
-    }
-       
-    .webdevclass {
-        margin-top: 0px;
-}
-    .float-left{ 
-        transform: scale(0.7);
-        transition: 1.5s;
+h2 {
+     font-family: Arial, Helvetica, sans-serif;
+ }
 
-    } 
-        
-    .webdevclass,.portfolioclass, .welcomeclass{
-        transform: translate(-230px,-80px);
-        transition: 1.5s; 
-       
-
-}
 /*becomes buggy at min width
